# ugm

./: .gitignore  Cargo.toml  readme.MD
src/: lib.rs  material.rs  mesh.rs  packing.rs  texture.rs
src/parser/: gltf.rs  mod.rs
tests/: tests.rs
