[package]
name = "ugm"
authors = ["Jason de Wolff <jason.dewolff@temporalinteractive.com>"]
edition = "2021"
homepage = "https://github.com/TemporalInteractive/ugm"
keywords = ["games", "3d", "models"]
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/TemporalInteractive/ugm"
version = "0.0.1"
readme = "README.md"
description = "Universal game model is a minimal crate designed as a high performance model format."

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.0.0", features = ["derive"] }
half = { version = "2.5.0", features = ["bytemuck"] }
glam = { version = "0.30.1", features = ["bytemuck"] }
#gltf = { version = "1.4.1", features = ["KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_transmission", "KHR_materials_specular", "KHR_materials_volume", "KHR_materials_specular", "KHR_texture_transform"], optional = true }
gltf = { git = "https://github.com/TemporalInteractive/gltf.git", rev = "6303150", features = ["KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_transmission", "KHR_materials_specular", "KHR_materials_volume", "KHR_materials_specular", "KHR_texture_transform", "KHR_materials_sheen", "KHR_materials_clearcoat"], optional = true }
image = "0.25.6"
intel_tex_2 = { version = "0.4.0", default-features = false }
rapier3d = { version = "0.24.0", default-features = false, features = ["dim3", "f32", "simd-stable"], optional = true }
speedy = { version = "0.8.7", features = ["uuid"] }
uuid = { version = "1.12.1", default-features = false, features = ["std", "v4"]}
wgpu = { version = "24.0.3", optional = true }

[features]
default = ["gltf", "rapier3d", "wgpu"]
gltf = ["dep:gltf"]
rapier3d = ["dep:rapier3d"]
wgpu = ["dep:wgpu"]